# Agent

./: .gitignore  ARCHITECTURE.md  main.py  pyproject.toml
data/: knowledge_base.json
src/: agent.py  state.py
src/agents/: educator.py  researcher.py  visualizer.py  writer.py
src/core/: providers.py
src/tools/: scrape.py  search.py  storage.py  weather.py
src/workflows/: hybrid_flow.py  react.py
tests/: test_educator.py  test_researcher.py  test_writer.py
