[project]
name = "agent"
version = "0.1.0"
description = "Simple LangChain Agent with OpenRouter and Ollama support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-ollama",
    "langgraph",
    "python-dotenv",
    "langchain-community>=0.4.1",
    "ddgs>=9.13.0",
    "trafilatura>=2.0.0",
    "pytest>=9.0.3",
]
